--- a/shippingcity/res/layout/activity_personal_guide.xml
+++ b/shippingcity/res/layout/activity_personal_guide.xml
@@ -198,5 +198,6 @@
     android:layout_alignParentRight="true"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="20dp"
+    android:visibility="invisible"
     />
 </RelativeLayout>
