--- a/shippingcity/res/layout/activity_regist.xml
+++ b/shippingcity/res/layout/activity_regist.xml
@@ -60,6 +60,7 @@
             android:text="阅读并同意"
             android:button="@drawable/btn_check_selector"
             android:textColor="#64A6FF"
+            android:checked="true"
             android:textSize="15sp" />
 
         <TextView
