--- a/shippingcity/res/layout/activity_pallet_detail.xml
+++ b/shippingcity/res/layout/activity_pallet_detail.xml
@@ -214,27 +214,35 @@
                     android:textSize="12sp" />
 
                 <HorizontalScrollView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:scrollbars="none" >
 
                     <LinearLayout
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal" >
 
                         <com.ateam.shippingcity.widget.weinxinImageShow.NoScrollGridView
                             android:id="@+id/gv_addPhoto"
-                            android:layout_width="fill_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:horizontalSpacing="1dp"
                             android:numColumns="5"
                             android:stretchMode="columnWidth"
                             android:verticalSpacing="1dp"
                             android:visibility="visible" />
+                        <TextView 
+                            android:id="@+id/tv_showPhoto"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"/>
                     </LinearLayout>
                 </HorizontalScrollView>
+                <TextView 
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
