--- a/shippingcity/res/layout/item_pallet_whole_offer.xml
+++ b/shippingcity/res/layout/item_pallet_whole_offer.xml
@@ -24,7 +24,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_marginLeft="@dimen/xlist_marginl"
-            android:background="@color/white"
+            android:hint="@string/input_you_offer"
             android:inputType="numberDecimal" />
 
         <View
