--- a/shippingcity/res/layout/activity_my_quote_sea_transport_fcl.xml
+++ b/shippingcity/res/layout/activity_my_quote_sea_transport_fcl.xml
@@ -191,8 +191,7 @@
                     android:id="@+id/iv_shipment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="17dp"
-                    android:src="@drawable/ic_launcher" />
+                    android:layout_marginLeft="17dp"/>
 
                 <TextView
                     android:id="@+id/tv_description"
@@ -206,6 +205,7 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/view_photo"
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="15dp"
@@ -213,6 +213,65 @@
                 android:background="@drawable/lineColor" />
 
             <LinearLayout
+                android:id="@+id/ll_photo"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:visibility="visible" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pallet_photo"
+                    android:textSize="12sp" />
+
+                <HorizontalScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none" >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" >
+
+                        <com.ateam.shippingcity.widget.weinxinImageShow.NoScrollGridView
+                            android:id="@+id/gv_addPhoto"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:horizontalSpacing="1dp"
+                            android:numColumns="5"
+                            android:stretchMode="columnWidth"
+                            android:verticalSpacing="1dp"
+                            android:visibility="visible" />
+                        <TextView 
+                            android:id="@+id/tv_showPhoto"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"/>
+                    </LinearLayout>
+                </HorizontalScrollView>
+                <TextView 
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/right_arrow" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                  android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/lineColor" />
+            <!-- <LinearLayout
                 android:id="@+id/ll_photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -271,7 +330,8 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:background="@drawable/lineColor" />
-            </LinearLayout>
+            </LinearLayout> -->
+
 
             <LinearLayout
                 android:layout_width="match_parent"
