--- a/shippingcity/res/layout/item_pallet_sea_transport.xml
+++ b/shippingcity/res/layout/item_pallet_sea_transport.xml
@@ -43,7 +43,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="16sp"/>
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/pallet_item_grey_title"
+                android:textSize="@dimen/pallet_item_title_size"/>
         </LinearLayout>
 
         <ImageView
