--- a/shippingcity/res/values/dimens.xml
+++ b/shippingcity/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="pallet_detail_item_magin">5dp</dimen> <!-- 每行间的距离  -->
     <dimen name="pallet_item_title">14sp</dimen>
     <dimen name="pallet_item_content_size">12sp</dimen>
+    <dimen name="pallet_item_title_size">16sp</dimen>
     
     <!-- 报价 -->
     <dimen name="pallet_offer_title">18sp</dimen>
