2015-4-15 wtw 我的报价空指针报错修改

--- a/shippingcity/res/layout/activity_my_quote_history.xml
+++ b/shippingcity/res/layout/activity_my_quote_history.xml
@@ -221,6 +221,7 @@
                     </LinearLayout>
 
                     <View
+                        android:id="@+id/view_photo"
                         android:layout_width="fill_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="15dp"
