--- a/shippingcity/res/layout/activity_personal_invite_friend.xml
+++ b/shippingcity/res/layout/activity_personal_invite_friend.xml
@@ -47,6 +47,7 @@
 	    />
 	</LinearLayout>
 	<Button 
+	    android:id="@+id/btn_invite"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:text="推荐"
