--- a/shippingcity/res/layout/activity_personal_info.xml
+++ b/shippingcity/res/layout/activity_personal_info.xml
@@ -163,7 +163,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="工牌"
+                    android:text="企业员工认证"
                     android:textSize="15sp"
                     android:textColor="#4c4c4c" />
 
@@ -241,7 +241,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="营业执照"
+                    android:text="公司认证"
                     android:textSize="15sp"
                     android:textColor="#4c4c4c" />
 
