--- a/shippingcity/res/layout/activity_base_x_list.xml
+++ b/shippingcity/res/layout/activity_base_x_list.xml
@@ -12,6 +12,6 @@
         android:layout_height="fill_parent"
         android:divider="@null"
         android:listSelector="@android:color/transparent"
-        android:scrollbars="none"
+        android:scrollbars="vertical"
 	    />
 </LinearLayout>
