--- a/shippingcity/res/layout/fragment_base_x_list.xml
+++ b/shippingcity/res/layout/fragment_base_x_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:divider="@null"
         android:listSelector="@android:color/transparent"
-        android:scrollbars="none"
+        android:scrollbars="vertical"
 	    ></com.ateam.shippingcity.widget.xlist.XListView>
 	
 </LinearLayout>
