2015-4-24 wtw 船公司下拉控件样式修改

--- a/shippingcity/res/layout/activity_pallet_offer.xml
+++ b/shippingcity/res/layout/activity_pallet_offer.xml
@@ -38,11 +38,10 @@
                     android:layout_weight="1"
                     android:background="@color/white"
                     android:completionThreshold="1"
-                    android:dropDownHorizontalOffset="20dp"
+                    android:dropDownVerticalOffset="2dp"
                     android:popupBackground="@drawable/autobg2"
                     android:padding="0dp"
                     android:textSize="16sp"
-                    
                     android:hint="@string/input_ship_company_name" />
             </LinearLayout>
 
