--- a/shippingcity/res/layout/activity_pallet_spell_offer.xml
+++ b/shippingcity/res/layout/activity_pallet_spell_offer.xml
@@ -82,6 +82,7 @@
                     android:hint="@string/input_price" />
 
                 <TextView
+                    android:id="@+id/tv_danwei"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/S_RT"
